--- a/mi-aplicacion/src/pages/Publication/components/CartHeader.css
+++ b/mi-aplicacion/src/pages/Publication/components/CartHeader.css
@@ -1,14 +1,15 @@
-/* CartHeader.css */
-
 .cart-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem 2rem;
-    /* border-bottom: 1px solid #e0e0e0; */
+    padding: 2.7rem 2rem;
     background: transparent;
     flex-shrink: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+
+.cart-header-spacer {
+    width: 2rem; 
 }
 
 .cart-header-title {
@@ -17,40 +18,38 @@
     margin: 0;
     color: var(--dark-color);
     letter-spacing: 0.5px;
+    flex: 1;
+    text-align: center;
 }
 
 .cart-header-close {
     background: none;
     border: none;
-    font-size: 1.5rem;
     cursor: pointer;
     color: var(--dark-color);
-    width: 1rem;
-    height: 2rem;
+    width: 2rem;
+    height: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
+    border-radius: 2px;
+    transition: all 0.2s ease;
+    position: relative;
+}
+
+.close-line {
+    position: absolute;
+    width: 16px;
+    height: 1px;
+    background-color: var(--dark-color);
     transition: all 0.2s ease;
 }
 
-/* .cart-header-close:hover {
-    background-color: #f0f0f0;
-    color: #333;
-} */
+.close-line-1 {
+    transform: rotate(45deg);
+}
 
-/* .cart-header-close:hover {
-    background-color: #f0f0f0;
-    color: #333;
-} */
+.close-line-2 {
+    transform: rotate(-45deg);
+}
 
-/* Responsive */
-/* @media (max-width: 768px) {
-    .cart-header {
-        padding: 1rem 1.5rem;
-    }
-    
-    .cart-header-title {
-        font-size: 1.1rem;
-    }
-} */
