--- a/mi-aplicacion/src/pages/Home/sections/Hero/Hero.css
+++ b/mi-aplicacion/src/pages/Home/sections/Hero/Hero.css
@@ -1,55 +1,89 @@
 .hero-section {
-    display: flex;
+    position: relative;
+    width: 100%;
+}
+
+.hero-viewport-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    /* background-image: url('/Images/Home/HomeBackground.jpg'); */
-    background-size: 55%;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.hero-section h1,
-.hero-section h2 {
-    position: relative;
-    z-index: 2;
-    padding: 0rem 2rem;
-}
-
-.hero-section h2 {
-    order: 2;
-    font-size: 3rem;
-    font-weight: 300;
-    margin: 0;
-    align-self: flex-end; 
-    text-align: right;
-    color: var(--dark-color);
-    font-family: var(--serif-font);
-    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    will-change: transform, top;
 }
 
 .hero-section h1 {
-    order: 1;
-    font-size: 9.2rem;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 23rem;
     letter-spacing: 0.5rem;
     margin: 0;
     text-transform: uppercase;
-    align-self: center; 
     color: var(--dark-color);
+    z-index: 2;
+    mix-blend-mode: difference; 
+    background-color: transparent;
 }
 
 .fundacionHero {
-    font-weight: 100;
+    font-size: 2rem;
+    font-weight: 75;
+    margin-top: -12rem;
 }
+
 .azarHero {
     font-weight: 300;
+    font-family: var(--serif-font);
+    margin-top: -6rem;
+}
+
+.hero-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+
+.hero-image-container img {
+    width: 70%;
+    height: auto;
+    object-fit: cover;
+    will-change: transform;
+    transition: transform 0.1s ease-out;
 }
 
 .hidden-title {
     visibility: hidden;
+}
+
+@media (max-width: 768px) {
+    .hero-section h1 {
+        font-size: 12rem;
+    }
+    
+    .fundacionHero {
+        font-size: 1.5rem;
+        margin-top: 4rem;
+    }
+    
+    .azarHero {
+        margin-top: -3rem;
+    }
+    
+    .hero-image-container img {
+        width: 90%;
+    }
 }
