--- a/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
+++ b/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
@@ -7,10 +7,9 @@
     margin: 0;
     position: relative;
     background-color: transparent;
-    padding: 2rem 2rem;
+    padding: 4rem 2rem;
+    /* margin-top: 7rem;
+    margin-bottom: 7rem; */
     background-color: transparent;
-    border-top: 1px solid var(--dark-color);
-    border-bottom: 1px solid var(--dark-color);
-    justify-content: space-between; /* Añade esta línea */
-
+    justify-content: space-between; 
 }
