cambiada la animacion de navigation a una mas simple: hover en vez de translation de imagenes

--- a/mi-aplicacion/src/components/Header/Header.css
+++ b/mi-aplicacion/src/components/Header/Header.css
@@ -111,7 +111,7 @@
 
 .sandwich-toggle.active.light .line {
     background-color: var(--light-color);
-    transition-delay: 0.2s;
+    /* transition-delay: 0.2s; */
 }
 
 /* Responsive */
