--- a/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
+++ b/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
@@ -1,4 +1,4 @@
-.section-team {
+/* .section-team {
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -31,13 +31,7 @@
 
 .team-pictures img:hover {
     transform: translateY(-5px);
-    /* opacity: 0.8;
-    transform: scale(1.05); */
 }
-
-/* .team-pictures img.selected {
-    border-color: #007bff; 
-} */
 
 .team-texts {
     min-height: 200px; 
@@ -61,13 +55,7 @@
     font-family: var(--main-font);
     font-weight: 200;
     color: var(--neutral-color);
-    /* font-style: italic; */
 }
-
-/* .member-bio {
-    line-height: 1.6;
-    color: #444;
-} */
 
 @keyframes fadeIn {
     from {
@@ -78,4 +66,143 @@
         opacity: 1;
         transform: translateY(0);
     }
+} */
+
+.section-team {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    background-color: transparent;
+
+    align-items: center;
+}
+
+.team-pictures {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    justify-content: center; 
+    flex-wrap: wrap;
+}
+
+.team-member {
+    cursor: pointer;
+    transition: all 0.4s ease;
+    flex: 1;
+    min-width: 200px; 
+    max-width: 300px; 
+    aspect-ratio: 3/4; 
+    object-fit: cover;
+    opacity: 1;
+}
+
+.team-member.selected {
+    opacity: 1;
+}
+
+.team-member.not-selected {
+    opacity: 0;
+}
+
+.team-bio blockquote::before,
+.team-bio blockquote::after {
+    content: '"';
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
+
+
+.team-intro {
+    text-align: center;
+    /* margin-top: 0rem; */
+    animation: fadeIn 0.5s ease-in-out;
+    /* margin-bottom: 4rem; */
+}
+
+.team-intro p {
+    font-size: 1.8rem;
+    color: var(--dark-color);
+    font-family: var(--main-font);
+    font-weight: 300;
+    line-height: 1.4;
+    margin: 0;
+    /* margin-bottom: 4rem; */
+}
+
+.team-bio,
+.team-intro {
+    min-height: 100px; 
+    max-width: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 4rem;
+
+}
+.member-name {
+    text-transform: capitalize;
+    align-self: flex-start;
+    width: 100%;
+    text-align: left;
+    font-size: 3rem;
+}
+.member-role {
+    text-transform:initial;
+    align-self: flex-start;
+    width: 100%;
+    text-align: left;
+    font-size: 1.3rem;
+    margin-top: 1rem;
+}
+
+.team-bio blockquote {
+    font-size: 1.5rem;
+    /* font-style: italic; */
+    color: var(--dark-color);
+    margin: 0 0 1rem 0;
+    font-family: var(--main-font);
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: center; 
+    margin-top: 4rem;
+    width: 100%;
+    text-align: justify;
+}
+
+.member-bio {
+    margin: 4rem 0 1rem 0;
+    text-align: justify; 
+    width: 85%;
+}
+
+.team-bio cite {
+    display: block;
+    width: 85%;
+    font-size: 1.2rem;
+    color: var(--corporative-color);
+    font-family: var(--main-font);
+    font-weight: 400;
+    font-style: normal;
+    border-top: 1px solid var(--corporative-color);
+    padding-top: 1rem;
+    margin-top: 2rem;
+    text-align: center;
 }
