--- a/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
+++ b/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
@@ -1,6 +1,37 @@
 .section-residencyDescription {
     width: 100%;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+    min-height: 100vh;
+    /* position: relative; */
+    /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.description-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 70%;
+}
+
+.residency-description {
+    /* font-size: 2rem; */
+    /* font-style: italic; */
+    color: var(--dark-color);
+    margin: 0 0 1rem 0;
+    font-family: var(--main-font);
+    /* font-weight: 300; */
+    line-height: 1.5;
+    text-align: center; 
+    margin-top: 4rem;
+    width: 100%;
+    text-align: justify;
+}
+
+.residency-texts {
+    width: 80%;
 }
