todo el contenido de las secciones de residency, con la info de exposicion, publicacion y obra colectiva

--- a/mi-aplicacion/src/pages/Residency/sections/Participants/Participants.css
+++ b/mi-aplicacion/src/pages/Residency/sections/Participants/Participants.css
@@ -10,6 +10,9 @@
     grid-template-areas: "numbers image info";
 
     margin: 0 auto; 
+
+    /* border-top: 1.5px solid var(--dark-color);
+    border-bottom: 1.5px solid var(--dark-color); */
 }
 
 .numbers-column {
