--- a/mi-aplicacion/src/pages/Residency/sections/PublicationMention/PublicationMention.css
+++ b/mi-aplicacion/src/pages/Residency/sections/PublicationMention/PublicationMention.css
@@ -1,6 +1,8 @@
 .section-publication-mention {
     width: 100%;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    align-items: center;
 }
