--- a/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
+++ b/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
@@ -1,12 +1,9 @@
 .section-residencyDescription {
     width: 100%;
-    min-height: 100vh;
-    /* position: relative; */
-    /* overflow: hidden; */
+    /* min-height: 100vh; */
     display: flex;
     flex-direction: column;
     padding: 2rem;
-    /* justify-content: center; */
     align-items: center;
 }
 
