--- a/mi-aplicacion/src/pages/Residency/sections/ExhibitionMention/ExhibitionMention.css
+++ b/mi-aplicacion/src/pages/Residency/sections/ExhibitionMention/ExhibitionMention.css
@@ -6,3 +6,19 @@
     padding: 2rem;
     align-items: center;
 }
+
+.residency-exhibitionM {
+    display: flex;
+    flex-direction: column;
+    margin-top: 6rem;
+    width: 90%;
+}
+
+.residency-exhibitionM img {
+    width: 80%;
+    align-self: center;
+    /* height: auto;  */
+    aspect-ratio: 4/5;
+    object-fit: cover; 
+    margin-bottom: 1rem; 
+}
