correccion titulo team

--- a/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
+++ b/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
@@ -80,6 +80,10 @@
     align-items: center;
 }
 
+.team-title {
+    align-self: flex-start;
+}
+
 .team-pictures {
     display: flex;
     flex-direction: row;
