--- a/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
+++ b/mi-aplicacion/src/pages/Residency/sections/DescriptionResidency/DescriptionResidency.css
@@ -19,8 +19,8 @@
     /* font-style: italic; */
     color: var(--dark-color);
     margin: 0 0 1rem 0;
-    font-family: var(--main-font);
-    /* font-weight: 300; */
+    /* font-family: var(--main-font); */
+    font-weight: 200;
     line-height: 1.5;
     text-align: center; 
     margin-top: 4rem;
