--- a/mi-aplicacion/src/components/TabMenu/TabMenu.css
+++ b/mi-aplicacion/src/components/TabMenu/TabMenu.css
@@ -66,8 +66,11 @@
     position: relative;
     /* font-family: var(--main-font); */
     /* font-size: 2.2rem; */
-    font-size: 2.2rem;
-    font-weight: 400;
+    font-size: 2.5rem;
+    /* font-weight: 100; */
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
+    /* font-style: var(--futura-normal); */
 }
 
 .tab-item:hover {
