--- a/mi-aplicacion/src/components/Titles/MediumSans/MediumSans.css
+++ b/mi-aplicacion/src/components/Titles/MediumSans/MediumSans.css
@@ -8,6 +8,11 @@
     color: var(--dark-color);
     letter-spacing: 0em;
     text-transform: uppercase;
+    
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
+    font-size: 2.8rem;
+    line-height: 1.4;
 }
 
 .medium-sans-title.large {
