--- a/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
+++ b/mi-aplicacion/src/pages/Home/sections/Intro/Intro.css
@@ -7,9 +7,8 @@
     margin: 0;
     position: relative;
     background-color: transparent;
-    padding: 6rem 2rem 3rem 2rem;
-    /* margin-top: 7rem;
-    margin-bottom: 7rem; */
+    /* padding: 2rem 2rem 3rem 2rem; */
+    padding: 2rem;
     background-color: transparent;
     justify-content: space-between; 
     align-items: center;
@@ -19,4 +18,10 @@
 .intro-text-home {
     text-align: center;
     width: 60%;
+}
+
+.intro-text-home2 {
+    text-align: center;
+width: 100%;
+/* margin-bottom: -7rem; */
 }
