--- a/mi-aplicacion/src/index.css
+++ b/mi-aplicacion/src/index.css
@@ -18,7 +18,8 @@
   --light-header-color: #f3f3f3;
 
 
-  --corporative-color: #074495;
+  /* --corporative-color: #074495; */
+  --corporative-color: #084495;
   --accent-color: #87ACDD;
 
   --main-font: 'Futura', Helvetica, Arial, sans-serif;
