--- a/mi-aplicacion/src/components/GenericCard/GenericCard.css
+++ b/mi-aplicacion/src/components/GenericCard/GenericCard.css
@@ -49,19 +49,25 @@
 }
 
 .card-title {
-    font-size: 1.25rem;
+    font-size: 1.7rem;
     font-weight: 500;
     color: var(--dark-color);
     margin: 0 0 8px 0;
     line-height: 1.3;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 .card-subtitle {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-weight: 300;
-    color: var(--neutral-color);
+    color: var(--dark-color);
     margin: 0;
     line-height: 1.4;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 /* Responsive */
@@ -77,4 +83,36 @@
     .card-subtitle {
         font-size: 0.85rem;
     }
+}
+
+
+.generic-card.single-card {
+    flex-direction: row;
+    gap: 7rem;
+    max-width: 900px;
+}
+
+.generic-card.card-image-container,
+.generic-card.card-content {
+    flex: 1;
+
+}
+
+.generic-card.single-card .card-image-container,
+.generic-card.single-card .card-content {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.generic-card.single-card .card-title {
+    font-size: 2.6rem; 
+    width: 100%;
+    margin: 0;
+}
+
+.generic-card.single-card .card-subtitle {
+    border-top: 1px solid var(--dark-color);
+    padding-top: 0.5rem;
+    font-size: 1.4rem;
 }
