--- a/mi-aplicacion/src/components/ImageCarousel/ImageCarousel.css
+++ b/mi-aplicacion/src/components/ImageCarousel/ImageCarousel.css
@@ -142,13 +142,16 @@
     color: var(--dark-color);
     padding: 0.5rem 1rem;
     border-radius: 20px;
-    font-size: 1.7rem;
+    font-size: 2rem;
     font-weight: 500;
     pointer-events: none;
     position: fixed;
     z-index: 1000;
     transform: translate(-50%, -100%);
     margin-top: -10px;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 /* Indicadores de puntos */
