--- a/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
+++ b/mi-aplicacion/src/components/Titles/MiniBlue/MiniBlue.css
@@ -1,13 +1,16 @@
 .miniblue-title {
     font-family: var(--main-font);
     font-weight: 100;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-transform: uppercase;
     line-height: 1.2;
     padding: 0;
     padding-bottom: 0.5rem;
-    color: var(--accent-color);
+    color: var(--corporative-color);
     letter-spacing: -0.02em;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 .miniblue-title.large {
