--- a/mi-aplicacion/src/pages/Publication/sections/Details/Details.css
+++ b/mi-aplicacion/src/pages/Publication/sections/Details/Details.css
@@ -174,6 +174,8 @@ justify-content: center;
     height: 100px; /* Altura fija para contener los accordions */
     /* overflow: hidden;  */
     position: relative;
+
+    
 }
 
 .accordion-item {
@@ -195,14 +197,19 @@ justify-content: center;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.4rem;
     font-weight: 500;
     transition: background-color 0.2s;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 .accordion-icon {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: 300;
+    /* font-family: var(--futura-font);
+    font-weight: var(--futura-book); */
 }
 
 .accordion-content {
@@ -210,6 +217,9 @@ justify-content: center;
     background: var(--light-color);
     border-top: 1px solid #ddd;
     animation: slideDown 0.3s ease-out;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 @keyframes slideDown {
@@ -230,7 +240,7 @@ justify-content: center;
 .accordion-content p {
     margin: 0 0 0.5rem 0;
     color: var(--neutral-color);
-    font-size: 0.9rem;
+    font-size: 1.1rem;
 }
 
 .accordion-content p:last-child {
