--- a/mi-aplicacion/src/pages/Publication/components/CartHeader.css
+++ b/mi-aplicacion/src/pages/Publication/components/CartHeader.css
@@ -6,6 +6,9 @@
     background: transparent;
     flex-shrink: 0;
     margin-bottom: 1rem;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 .cart-header-spacer {
@@ -13,7 +16,7 @@
 }
 
 .cart-header-title {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 400;
     margin: 0;
     color: var(--dark-color);
