--- a/mi-aplicacion/src/pages/Publication/components/CartItemsList.css
+++ b/mi-aplicacion/src/pages/Publication/components/CartItemsList.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 0;
+
 }
 
 .cart-items-empty {
@@ -17,6 +18,9 @@
     padding: 2rem;
     color: var(--dark-color);
     font-style: italic;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-book);
 }
 
 .cart-items-empty p {
