--- a/mi-aplicacion/src/pages/Home/sections/OpenCall/OpenCall.css
+++ b/mi-aplicacion/src/pages/Home/sections/OpenCall/OpenCall.css
@@ -6,7 +6,7 @@
     padding: 0;
     margin: 0;
     position: relative;
-    background-color: var(--accent-color);
+    background-color: transparent;
     padding: 2rem 2rem;
     border-top: 1px solid var(--dark-color);
     border-bottom: 1px solid var(--dark-color);
