--- a/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
+++ b/mi-aplicacion/src/pages/Foundation/sections/Team/Team.css
@@ -189,6 +189,9 @@
     margin-top: 4rem;
     width: 100%;
     text-align: justify;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-medium);
 }
 
 .member-bio {
