--- a/mi-aplicacion/src/components/Header/Navigation/Navigation2.css
+++ b/mi-aplicacion/src/components/Header/Navigation/Navigation2.css
@@ -28,7 +28,7 @@
     color: var(--dark-color);
     font-weight: 100;
     border-right: 1px solid var(--light-neutral-color);
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-transform: uppercase;
     background-color: var(--light-header-color);
     position: relative;
@@ -37,6 +37,9 @@
     font-family: var(--main-font);
     animation: slideDownNavLink 0.6s cubic-bezier(0.11, 0, 0.5, 0) both;
     pointer-events: auto;
+
+    font-family: var(--futura-font);
+    font-weight: var(--futura-medium);
 }
 
 @keyframes slideDownNavLink {
